dist_pkgdata_DATA = epactsSingle.R epactsGroup.R epactsMulti.R mmSKAT_0.95.tar.gz \
	group.b.collapse.R group.b.madsen.R group.q.reverse.R group.skat.R group.b.burden.R \
	group.mmskat.R group.b.wcnt.R group.q.wilcox.R \
	single.b.firth.R single.b.firthCov.R single.b.wald.R single.q.reverse.R \
	single.b.spa2.R single.b.sna0.R single.b.sna2.R \
	single.b.lrt.R single.q.linear.R single.q.wilcox.R single.q.lm.R single.b.score.R \
	single.q.emmaxR.R \
	multi.q.linear.R \
	prologue.ps genetic_map_GRCh37_wgs.txt.gz genetic_map_GRCh37_wgs.txt.gz.tbi GillSansItalic.pfb GillSansMT.pfb hg19_refFlat.txt.gz hg19_refGene.txt.gz hg19_gencodeV7.txt.gz calibri.pfb arial.pfb 1000G_exome_chr20_example_softFiltered.calls.vcf.gz 1000G_exome_chr20_example_softFiltered.calls.vcf.gz.tbi 1000G_dummy_pheno.ped codon.txt priority.txt epactsR_3.3.3.tar.gz \
	wgEncodeBroadHmmGm12878HMM.bed.gz wgEncodeBroadHmmH1hescHMM.bed.gz.tbi wgEncodeBroadHmmHmecHMM.bed.gz wgEncodeBroadHmmHsmmHMM.bed.gz.tbi wgEncodeBroadHmmK562HMM.bed.gz wgEncodeBroadHmmNhekHMM.bed.gz.tbi wgEncodeBroadHmmGm12878HMM.bed.gz.tbi wgEncodeBroadHmmHepg2HMM.bed.gz wgEncodeBroadHmmHmecHMM.bed.gz.tbi wgEncodeBroadHmmHuvecHMM.bed.gz wgEncodeBroadHmmK562HMM.bed.gz.tbi wgEncodeBroadHmmNhlfHMM.bed.gz wgEncodeBroadHmmH1hescHMM.bed.gz wgEncodeBroadHmmHepg2HMM.bed.gz.tbi wgEncodeBroadHmmHsmmHMM.bed.gz wgEncodeBroadHmmHuvecHMM.bed.gz.tbi wgEncodeBroadHmmNhekHMM.bed.gz wgEncodeBroadHmmNhlfHMM.bed.gz.tbi hg19_gencodeV14.txt.gz
